k8s/azure/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kf-frontend-admin
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kf-frontend
      branch: develop
  template:
    metadata:
      labels:
        app: kf-frontend
        branch: develop
    spec:
      containers:
      - name: kf-frontend
        image: kfstaging.azurecr.io/kf/frontend-admin:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
      #securityContext:
        #runAsNonRoot: true
        #runAsUser: 1000
---
# service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: kf-frontend-admin-service
#   namespace: staging
# spec:
#   selector:
#     app: kf-frontend
#     branch: develop
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 3000
#   type: ClusterIP
# ---
# # ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: kf-frontend-admin-ingress
#   namespace: staging
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - host: admin.kfstaging.qatalyst.tech
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: kf-frontend-admin-service
#             port:
#               number: 80
