k8s/azure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kf-frontend-admin-service
  namespace: staging
spec:
  selector:
    app: kf-frontend
    branch: develop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
